--- a/Scripts/Data_models.ipynb
+++ b/Scripts/Data_models.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'plot_pr_curve' from 'auxiliary' (c:\\Users\\henri\\OneDrive\\Documentos\\EDSA\\EDS Bootcamp\\Project\\Scripts\\auxiliary.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-94-f6df06e95726>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mStratifiedKFold\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mGridSearchCV\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mauxiliary\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mplot_cm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplot_nn_metrics\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplot_roc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msave_metrics\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdrop_var_nonobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdrop_var_obj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplot_pr_curve\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'plot_pr_curve' from 'auxiliary' (c:\\Users\\henri\\OneDrive\\Documentos\\EDSA\\EDS Bootcamp\\Project\\Scripts\\auxiliary.py)"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -22,7 +34,7 @@
     "from sklearn import metrics\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold, GridSearchCV\n",
     "\n",
-    "from auxiliary import plot_cm, plot_nn_metrics, plot_roc, save_metrics, drop_var_nonobj, drop_var_obj\n",
+    "from auxiliary import plot_cm, plot_nn_metrics, plot_roc, save_metrics, drop_var_nonobj, drop_var_obj, plot_pr_curve\n",
     "\n",
     "import os\n",
     "import tempfile\n",
@@ -478,12 +490,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# initialization of the dataframe to store the metrics for each model evaluated on test split\n",
     "models_summary = pd.DataFrame(columns=['model','tp', 'fp', 'tn', 'fn', \n",
+    "                                       'acc', 'prec', 'recall', 'auc', 'f1', 'mc_coef', \n",
+    "                                       'batch_s'])\n",
+    "\n",
+    "m_summary = pd.DataFrame(columns=['model','tp', 'fp', 'tn', 'fn', \n",
     "                                       'acc', 'prec', 'recall', 'auc', 'f1', 'mc_coef', \n",
     "                                       'batch_s'])"
    ]
@@ -593,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -659,13 +675,14 @@
        "0  0.777778  0.291667  0.811314  0.424242  0.424592      NaN  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "models_summary = save_metrics(models_summary, model_XGB, test_labels, model_XGB.predict_proba(test_features)[:, 1])\n",
+    "m_summary = save_metrics(m_summary, 'model_XGB', test_labels, model_XGB.predict_proba(test_features)[:, 1])\n",
     "models_summary"
    ]
   },
@@ -815,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -898,13 +915,14 @@
        "1  0.741497  0.347826  0.666667  0.847222  0.457143  0.336990      NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "models_summary = save_metrics(models_summary, model_logistic, test_labels, model_logistic.predict_proba(test_features)[:,1])\n",
+    "m_summary = save_metrics(m_summary, 'model_logistic', test_labels, model_logistic.predict_proba(test_features)[:,1])\n",
     "models_summary.sort_values(by=['mc_coef', 'auc', 'prec'], ascending=False)"
    ]
   },
@@ -1042,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1142,13 +1160,14 @@
        "0  0.870748  0.777778  0.291667  0.811314  0.424242  0.424592      NaN  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "models_summary = save_metrics(models_summary, model_LinearSVC, test_labels, model_LinearSVC.decision_function(test_features))\n",
+    "m_summary = save_metrics(m_summary, 'model_LinearSVC', test_labels, model_LinearSVC.decision_function(test_features))\n",
     "models_summary.sort_values(by=['f1', 'auc', 'prec'], ascending=False)"
    ]
   },
@@ -1305,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1422,13 +1441,14 @@
        "1  0.741497  0.347826  0.666667  0.847222  0.457143  0.336990      NaN  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "models_summary = save_metrics(models_summary, model_SVC, test_labels, model_SVC.predict_proba(test_features)[:, 1])\n",
+    "m_summary = save_metrics(m_summary, 'model_SVC', test_labels, model_SVC.predict_proba(test_features)[:, 1])\n",
     "models_summary.sort_values(by=['mc_coef', 'auc', 'prec'], ascending=False)"
    ]
   },
@@ -1578,13 +1598,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1437: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1437: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:872: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  mcc = cov_ytyp / np.sqrt(cov_ytyt * cov_ypyp)\n",
       "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1437: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n",
       "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1437: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
@@ -1724,13 +1750,14 @@
        "4  0.836735  0.000000  0.000000  0.500000  0.000000  0.000000      NaN  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "models_summary = save_metrics(models_summary, model_RadiusNC, test_labels, model_RadiusNC.predict(test_features))\n",
+    "m_summary = save_metrics(m_summary, 'model_RadiusNC', test_labels, model_RadiusNC.predict(test_features))\n",
     "models_summary.sort_values(by=['mc_coef', 'auc', 'prec'], ascending=False)"
    ]
   },
@@ -1884,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2035,13 +2062,14 @@
        "4  0.836735  0.000000  0.000000  0.500000  0.000000  0.000000      NaN  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "models_summary = save_metrics(models_summary, model_RandomForest, test_labels, model_RandomForest.predict_proba(test_features)[:, 1])\n",
+    "m_summary = save_metrics(m_summary, 'model_RandomForest', test_labels, model_RandomForest.predict_proba(test_features)[:, 1])\n",
     "models_summary.sort_values(by=['mc_coef', 'auc', 'prec'], ascending=False)"
    ]
   },
@@ -2557,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2725,13 +2753,14 @@
        "4  0.836735  0.000000  0.000000  0.500000  0.000000  0.000000      NaN  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "models_summary = save_metrics(models_summary, 'NN_base', test_labels, model_keras.predict_proba(test_features), batch_size=BATCH_SIZE)\n",
+    "m_summary = save_metrics(m_summary, 'NN_base', test_labels, model_keras.predict_proba(test_features), batch_size=BATCH_SIZE)\n",
     "models_summary.sort_values(by=['f1', 'recall'], ascending=False)"
    ]
   },
@@ -2995,16 +3024,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_summary = save_metrics(models_summary, 'NN_weighted', test_labels, weighted_model.predict_proba(test_features, batch_size=BATCH_SIZE), batch_size=BATCH_SIZE)"
+    "models_summary = save_metrics(models_summary, 'NN_weighted', test_labels, weighted_model.predict_proba(test_features, batch_size=BATCH_SIZE), batch_size=BATCH_SIZE)\n",
+    "m_summary = save_metrics(m_summary, 'NN_weighted', test_labels, weighted_model.predict_proba(test_features, batch_size=BATCH_SIZE), batch_size=BATCH_SIZE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -3045,7 +3075,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>LinearSVC(C=1, class_weight={0: 0.595945945945...</td>\n",
+       "      <td>model_LinearSVC</td>\n",
        "      <td>11</td>\n",
        "      <td>4</td>\n",
        "      <td>119</td>\n",
@@ -3075,7 +3105,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>(DecisionTreeClassifier(class_weight=None, cri...</td>\n",
+       "      <td>model_RandomForest</td>\n",
        "      <td>11</td>\n",
        "      <td>9</td>\n",
        "      <td>114</td>\n",
@@ -3105,7 +3135,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>LogisticRegression(C=1,\\n                   cl...</td>\n",
+       "      <td>model_logistic</td>\n",
        "      <td>16</td>\n",
        "      <td>30</td>\n",
        "      <td>93</td>\n",
@@ -3120,7 +3150,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
+       "      <td>model_XGB</td>\n",
        "      <td>7</td>\n",
        "      <td>2</td>\n",
        "      <td>121</td>\n",
@@ -3135,7 +3165,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>SVC(C=7, cache_size=200,\\n    class_weight={0:...</td>\n",
+       "      <td>model_SVC</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
        "      <td>122</td>\n",
@@ -3150,7 +3180,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>RadiusNeighborsClassifier(algorithm='auto', le...</td>\n",
+       "      <td>model_RadiusNC</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>123</td>\n",
@@ -3168,45 +3198,45 @@
        "</div>"
       ],
       "text/plain": [
-       "                                               model  tp  fp   tn  fn  \\\n",
-       "2  LinearSVC(C=1, class_weight={0: 0.595945945945...  11   4  119  13   \n",
-       "7                                        NN_weighted  16  21  102   8   \n",
-       "5  (DecisionTreeClassifier(class_weight=None, cri...  11   9  114  13   \n",
-       "6                                            NN_base   8   3  120  16   \n",
-       "1  LogisticRegression(C=1,\\n                   cl...  16  30   93   8   \n",
-       "0  XGBClassifier(base_score=0.5, booster='gbtree'...   7   2  121  17   \n",
-       "3  SVC(C=7, cache_size=200,\\n    class_weight={0:...   6   1  122  18   \n",
-       "4  RadiusNeighborsClassifier(algorithm='auto', le...   0   0  123  24   \n",
+       "                model  tp  fp   tn  fn       acc      prec    recall  \\\n",
+       "2     model_LinearSVC  11   4  119  13  0.884354  0.733333  0.458333   \n",
+       "7         NN_weighted  16  21  102   8  0.802721  0.432432  0.666667   \n",
+       "5  model_RandomForest  11   9  114  13  0.850340  0.550000  0.458333   \n",
+       "6             NN_base   8   3  120  16  0.870748  0.727273  0.333333   \n",
+       "1      model_logistic  16  30   93   8  0.741497  0.347826  0.666667   \n",
+       "0           model_XGB   7   2  121  17  0.870748  0.777778  0.291667   \n",
+       "3           model_SVC   6   1  122  18  0.870748  0.857143  0.250000   \n",
+       "4      model_RadiusNC   0   0  123  24  0.836735  0.000000  0.000000   \n",
        "\n",
-       "        acc      prec    recall       auc        f1   mc_coef  batch_s  \n",
-       "2  0.884354  0.733333  0.458333  0.848238  0.564103  0.519930      NaN  \n",
-       "7  0.802721  0.432432  0.666667  0.824187  0.524590  0.422363     64.0  \n",
-       "5  0.850340  0.550000  0.458333  0.794715  0.500000  0.415227      NaN  \n",
-       "6  0.870748  0.727273  0.333333  0.826558  0.457143  0.433981     64.0  \n",
-       "1  0.741497  0.347826  0.666667  0.847222  0.457143  0.336990      NaN  \n",
-       "0  0.870748  0.777778  0.291667  0.811314  0.424242  0.424592      NaN  \n",
-       "3  0.870748  0.857143  0.250000  0.840447  0.387097  0.419785      NaN  \n",
-       "4  0.836735  0.000000  0.000000  0.500000  0.000000  0.000000      NaN  "
+       "        auc        f1   mc_coef  batch_s  \n",
+       "2  0.848238  0.564103  0.519930      NaN  \n",
+       "7  0.824187  0.524590  0.422363     64.0  \n",
+       "5  0.794715  0.500000  0.415227      NaN  \n",
+       "6  0.826558  0.457143  0.433981     64.0  \n",
+       "1  0.847222  0.457143  0.336990      NaN  \n",
+       "0  0.811314  0.424242  0.424592      NaN  \n",
+       "3  0.840447  0.387097  0.419785      NaN  \n",
+       "4  0.500000  0.000000  0.000000      NaN  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "models_summary.sort_values(by=['f1', \n",
+    "m_summary.sort_values(by=['f1', \n",
     "                               #'auc', \n",
     "                               'recall'], ascending=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_summary.sort_values(by=['f1', \n",
+    "m_summary.sort_values(by=['f1', \n",
     "                               #'auc', \n",
     "                               'recall'], ascending=False).to_csv('preliminary_metrics_models_byf1score.csv')"
    ]
@@ -3250,6 +3280,13 @@
     "plt.legend(loc='lower right')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
